@@ -32,3 +32,4 @@ Main Features / Advantages
   * paging ( can be disabled and customized )
   * multiple themes included
   * Excel export
+  * Adjustable side menu
